[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/crock.png" type="Texture" id=1]
[ext_resource path="res://npcScript/crock.gd" type="Script" id=2]
[ext_resource path="res://NPCs/animationNode.gd" type="Script" id=3]
[ext_resource path="res://NPCs/animation_right.gd" type="Script" id=4]
[ext_resource path="res://assets/music/pounce.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 105.4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "peak"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.3, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 105.4, 47.2, -3.7, -3.7, 15.0, -3.7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "peak"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.3, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -105.4, -47.2, -3.7, -3.7, -15.0, 3.7 ]
}

[sub_resource type="CircleShape2D" id=5]

[node name="crock" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, -7 )
shape = SubResource( 1 )

[node name="animation_left" type="Node2D" parent="."]
position = Vector2( -27, 30 )
rotation = 1.83958
script = ExtResource( 3 )

[node name="Sprite_left" type="Sprite" parent="animation_left"]
position = Vector2( 28, -30 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="animation_left"]
anims/RESET = SubResource( 2 )
anims/peak = SubResource( 3 )

[node name="animation_right" type="Node2D" parent="."]
position = Vector2( 27, 30 )
rotation = -1.83958
script = ExtResource( 4 )

[node name="Sprite_right" type="Sprite" parent="animation_right"]
position = Vector2( -25, -31 )
texture = ExtResource( 1 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="animation_right"]
anims/peak = SubResource( 4 )

[node name="debug_label" type="Label" parent="."]
visible = false
margin_left = -18.0
margin_top = 82.0
margin_right = 22.0
margin_bottom = 96.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -8, -7 )
shape = SubResource( 5 )

[node name="attacksfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
